@@ -1,3 +1,8 @@
+2011-06-21  Mike Frysinger  <vapier@gentoo.org>
+
+	* bfin/syscalls.c: Trim trailing whitespace.
+	* bfin/crt0.S: Likewise.
+
 2011-06-14  Joseph Myers  <joseph@codesourcery.com>
 
 	* configure.in: Don't handle strongarm, ep9312 and xscale target
